fix background color on mobile menu toggle

--- a/themes/tria-2019/source/css/style.styl
+++ b/themes/tria-2019/source/css/style.styl
@@ -223,6 +223,7 @@ body
 
   #toggle-nav
     appearance none
+    background-color transparent
     background-image url('/images/nav-switch.png')
     background-position top left
     background-size cover
